; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/extr_arcturus_ppt.c_arcturus_get_smu_table_index.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/extr_arcturus_ppt.c_arcturus_get_smu_table_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smu_11_0_cmn2aisc_mapping = type { i32, i32 }
%struct.smu_context = type { i32 }

@SMU_TABLE_COUNT = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@arcturus_table_map = common dso_local global %struct.smu_11_0_cmn2aisc_mapping* null, align 8
@.str = private unnamed_addr constant [27 x i8] c"Unsupported SMU table: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smu_context*, i64)* @arcturus_get_smu_table_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arcturus_get_smu_table_index(%struct.smu_context* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.smu_context*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.smu_11_0_cmn2aisc_mapping, align 4
  store %struct.smu_context* %0, %struct.smu_context** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* @SMU_TABLE_COUNT, align 8
  %9 = icmp uge i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %30

13:                                               ; preds = %2
  %14 = load %struct.smu_11_0_cmn2aisc_mapping*, %struct.smu_11_0_cmn2aisc_mapping** @arcturus_table_map, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds %struct.smu_11_0_cmn2aisc_mapping, %struct.smu_11_0_cmn2aisc_mapping* %14, i64 %15
  %17 = bitcast %struct.smu_11_0_cmn2aisc_mapping* %6 to i8*
  %18 = bitcast %struct.smu_11_0_cmn2aisc_mapping* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 8, i1 false)
  %19 = getelementptr inbounds %struct.smu_11_0_cmn2aisc_mapping, %struct.smu_11_0_cmn2aisc_mapping* %6, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %27, label %22

22:                                               ; preds = %13
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @pr_warn(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %3, align 4
  br label %30

27:                                               ; preds = %13
  %28 = getelementptr inbounds %struct.smu_11_0_cmn2aisc_mapping, %struct.smu_11_0_cmn2aisc_mapping* %6, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %27, %22, %10
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @pr_warn(i8*, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
